Fixed pagination vertical alignment

--- a/src/common/components/data-table-footer/data-table-footer.styles.scss
+++ b/src/common/components/data-table-footer/data-table-footer.styles.scss
@@ -20,7 +20,7 @@
 
     .button-nav {
       display: flex;
-      align-items: flex-end;
+      align-items: center;
       line-height: 1;
     }
   }
